--- a/notebooks/bbc_test.ipynb
+++ b/notebooks/bbc_test.ipynb
@@ -98,7 +98,7 @@
     "            doc = '. '.join(doc)\n",
     "            doc = doc.translate(None, string.punctuation) # strip punctuations\n",
     "            doc = doc.translate(None, '0123456789') # strip numbers        \n",
-    "            doc = doc.decode(\"utf8\").encode('ascii', 'ignore') # ignore all fancy unicode characters\n",
+    "            doc = doc.decode(\"utf8\").encode('ascii', 'ignore') # ignore fancy unicode chars\n",
     "            all_docs.append(doc)        \n",
     "\n",
     "            tokens = word_tokenize(str(doc))\n",
@@ -502,13 +502,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plot the topic assignment for the first processed document in the corpus"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 152,
    "metadata": {
@@ -551,6 +544,13 @@
     "        colour = colour_map[l]\n",
     "        output += '<span style=\"color:%s\">%s</span> ' % (colour, w)\n",
     "    display(HTML(output))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you run this notebook locally, you'd be able to flip through the documents in the corpus and see the topic assignments of individual words of the document."
    ]
   },
   {
@@ -643,18 +643,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.13"
-  },
-  "widgets": {
-   "state": {
-    "c1a31f99235641af9b9d43fe9b38c40b": {
-     "views": [
-      {
-       "cell_index": 27
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
   }
  },
  "nbformat": 4,
